fix dark mode toggle

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 main {
-flex: 1;
+  flex: 1;
 }
 
 .hero h2 {
@@ -112,24 +112,25 @@ header input {
 
 .products-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 25px;
+  margin-top: 20px;
 }
 
 /* CARD */
 
 .product-card {
   background: rgb(196, 201, 201);
-  border-radius: 12px;
   padding: 20px;
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
   text-align: center;
-  transition: all 0.25s ease;
+  transition: 0.25s;
 }
 
 .product-card:hover {
   transform: translateY(-6px);
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
 }
 
 .product-card img {
@@ -258,9 +259,17 @@ footer {
   color: white;
 }
 
+.dark header {
+  background: #020617;
+}
+
 .dark .product-card {
   background: #1e293b;
   color: white;
+}
+
+.dark footer {
+  background: #020617;
 }
 
 .skeleton {
